--- a/nginx.conf
+++ b/nginx.conf
@@ -1,77 +1,95 @@
-worker_processes    1;
-user                nginx;
+user nginx;
+worker_processes auto;
 
-error_log /var/log/nginx/error.log warn;
-pid       /var/run/nginx.pid;
+pid /var/run/nginx.pid;
 
 events {
+  multi_accept on;
   worker_connections 1024;
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+  charset utf-8;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  server_tokens off;
+  log_not_found off;
+  types_hash_max_size 2048;
+  client_max_body_size 20M;
 
-  log_format  main '$remote_addr - $remote_user [$time_local] "$request" '
-                   '$status $body_bytes_sent "$http_referer" '
-                   '"$http_user_agent" "$http_x_forwarded_for"';
-
-  keepalive_timeout  15;
-  autoindex          off;
-  server_tokens      off;
-  port_in_redirect   off;
-  sendfile           on;
-  tcp_nopush         on;
-  tcp_nodelay        on;
-
-  client_max_body_size        64k;
-  client_header_buffer_size   16k;
-  large_client_header_buffers 4 16k;
-
-  gzip             on;
-  gzip_vary        on;
-  gzip_proxied     any;
-  gzip_types       application/javascript application/x-javascript application/rss+xml text/javascript text/css image/svg+xml;
-  gzip_buffers     16 8k;
-  gzip_comp_level  6;
-
-  access_log         /var/log/nginx/access.log main;
+  # MIME
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
   server {
     listen 80;
+    listen [::]:80;
 
-    autoindex off;
-    charset utf-8;
-    error_page 404 /usr/share/nginx/html/404.html;
+    root /usr/share/nginx/html;
+    index index.html;
 
+    location ~ (index.html|service-worker.js)$ {
+        expires -1;
+    }
+    
+    # Single-Page-App fallback routing
     location / {
-      if ($http_x_forwarded_proto = "http") {
-        return 301 https://$server_name$request_uri;
-      }
-
-      root /usr/share/nginx/html;
-      index index.html indx.htm;
+      # First attempt to serve request as file, then
+      # as directory, then fall back to redirecting to index.html
+      try_files $uri $uri/ /index.html;
     }
 
-    location ~* \.(html)$ {
-      if ($http_x_forwarded_proto = "http") {
-        return 301 https://$server_name$request_uri;
-      }
-
-      root /usr/share/nginx/html;
-      add_header Cache-Control "no-store";
-      expires    off;
-    }
-
-    location ~* \.(ico|jpg|jpeg|png|gif|svg|js|jsx|css|less|swf|eot|ttf|otf|woff|woff2|json)$ {
-      if ($http_x_forwarded_proto = "http") {
-        return 301 https://$server_name$request_uri;
-      }
-
-      root /usr/share/nginx/html;
+    # Media: images, icons, video, audio, HTC
+    location /static {
+      expires 7d;
+      access_log off;
       add_header Cache-Control "public";
-      expires +1y;
     }
 
+    # Flags don't change often
+    location /static/flags {
+      expires 365d;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+
+    # CSS and JS bundles
+    location /bundles {
+      try_files $uri =404;
+      add_header Cache-Control "public, max-age=31536000, immutable";
+      access_log off;
+    }
+
+    # favicon.ico
+    location = /favicon.ico {
+      rewrite . /static/favicon.ico;
+      expires  14d;
+      add_header Cache-Control public;
+    }
+
+    # robots.txt
+    location = /robots.txt {
+      log_not_found off;
+      access_log off;
+    }
+
+    # Any route containing a file extension
+    location ~ ^.+\..+$ {
+      try_files $uri =404;
+    }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
+    # Gzip
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
   }
 }
